--- a/DevProject/index.html
+++ b/DevProject/index.html
@@ -1,3 +1,4 @@
+<!-- Before 05/04/23
 <!DOCTYPE html>
 <html>
 <head>
@@ -18,3 +19,34 @@
  
 </body>
 </html>
+-->
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>This is a learning exercise</title>
+    <link href="./resources/css/index.css" type="text/css" rel="stylesheet">
+  </head>
+  <body>
+    <header>
+      <div class="container">
+        <h1>Robert Cash</h1>
+      </div>
+    </header>
+    <div class="container">
+      <p class="intro-text">This is my first webpage guided by CodeAcademy! My goals are...</p>
+      <ul class="goals-list">
+        <li>Complete Front End Web Development Certification.</li>
+        <li>Get a good paying job.</li>
+        <li>Get my own house.</li>
+      </ul>
+      <p>This is one of my favorite songs: <a href="https://www.youtube.com/watch?v=_qQsPw4CqUI&list=RDMM&index=27&ab_channel=Marshmello" target="_blank">Everyday by Logic FT MarshMello</a></p>
+      
+    </div>
+    <footer>
+      <div class="container">
+        <p>&copy; 2023 Robert Cash</p>
+      </div>
+    </footer>
+  </body>
+</html>
+
