--- a/Cheat Sheet/index.html
+++ b/Cheat Sheet/index.html
@@ -1,3 +1,97 @@
+<!--Last Updated 05/04/23-->
+<!DOCTYPE html>
+<html>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Cheat Sheet</title>
+    <link rel="stylesheet" href="styles.css">
+  </head>
+  <body>
+    <header>
+      <h1>HTML Basics Cheat Sheet</h1>
+    </header>
+    <main>
+      <table>
+        <caption>List of HTML tags</caption>
+        <thead>
+          <tr>
+            <th>Tag</th>
+            <th>Name</th>
+            <th>Description</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr>
+            <td>
+              <code>&lt;!DOCTYPE html&gt;</code>
+            </td>
+            <td>Doctype</td>
+            <td>Declares the document type and version of HTML being used. It should always be the first line of your code.</td>   
+          </tr>
+          <tr>
+            <td>
+              <code>&lt;html&gt;</code>
+            </td>
+            <td>HTML</td>
+            <td>Encloses all the HTML elements of a document, including the head and body sections.</td>   
+          </tr>
+          <tr>
+            <td>
+              <code>&lt;head&gt;</code>
+            </td>
+            <td>Head</td>
+            <td>Contains metadata about the document, such as the title, author, and links to stylesheets and scripts.</td>   
+          </tr>
+          <tr>
+            <td>
+              <code>&lt;body&gt;</code>
+            </td>
+            <td>Body</td>
+            <td>Contains the visible content of the document, such as text, images, videos, and interactive elements.</td>   
+          </tr>
+          <tr>
+            <td>
+              <code>&lt;table&gt;</code>
+            </td>
+            <td><a href="https://content.codecademy.com/PRO/independent-practice-projects/html-css-cheat-sheet/example/index.html?_gl=1*iu3gmf*_ga*MjQ5NjU3NDc2Ni4xNjc4NjY3NzM4*_ga_3LRZM6TM9L*MTY4MDExNDc2NS4yNi4xLjE2ODAxMTQ3NjkuNTYuMC4w" target="_blank">Table</a></td>
+            <td>Defines a table with rows and columns to organize data in a tabular format.</td>   
+          </tr>
+          <tr>
+            <td>
+              <code>&lt;a&gt;</code>
+            </td>
+            <td>Link</td>
+            <td>Creates a hyperlink to another document or location within the same document.</td>   
+          </tr>
+          <tr>
+            <td>
+              <code>&lt;img&gt;</code>
+            </td>
+            <td>Image</td>
+            <td>Displays an image on the web page, with optional attributes such as width, height, and alt text.</td>   
+          </tr>
+          <tr>
+            <td>
+              <code>&lt;form&gt;</code>
+            </td>
+            <td>Form</td>
+            <td>Creates a user input form with various types of form elements, such as text fields, radio buttons, checkboxes, and buttons.</td>   
+          </tr>
+          <tr>
+            <td>
+                <span class="code">&lt;!-- comment goes here --&gt;</span>
+            </td>
+            <td>HTML Comment</td>
+            <td>Comments are used to add notes to your code. They are not displayed on the webpage but are visible in the code.</td>   
+        </tr>
+        
+        </tbody>
+      </table>
+    </main>
+  </body>
+</html>
+<!-- Version before 05/04/23 
 <!DOCTYPE html>
 <html>
     <head>
@@ -62,4 +156,4 @@
             </tbody>
         </table>
     </body>
-</html>
+</html> -->
